# humanoid_mk1

./: .gitignore  AGENTS.md  README.md  start_docker.sh
docker/: Dockerfile  start_docker.sh
docker/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
docker/log/: latest_build
docs/: architecture.md  devlog.md  hardware.md
ros2_ws/: build_ros.sh  env.sh
ros2_ws/src/humanoid_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/humanoid_bringup/config/: ak70_can_driver.yaml  ak70_command_test.yaml  control_loop_node.yaml
ros2_ws/src/humanoid_bringup/launch/: ak70_driver.launch.py  ak70_test_system.launch.py  control_loop.launch.py
ros2_ws/src/humanoid_bringup/src/: control_loop_node.cpp  control_loop_subscriber_node.cpp
ros2_ws/src/humanoid_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/humanoid_control/config/: ak70_motors.yaml
ros2_ws/src/humanoid_control/launch/: ak70_driver.launch.py  ak70_test.launch.py
ros2_ws/src/humanoid_control/msg/: DriverCommand.msg  MotorCommand.msg  MotorCommandArray.msg  MotorState.msg  MotorStateArray.msg
ros2_ws/src/humanoid_control/scripts/: ak70_can_node.py  ak70_command_test_node.py  ak70_control_panel.py  ak70_driver_node.py
ros2_ws/src/humanoid_control/scripts/humanoid_control_py/: __init__.py  ak70_driver_core.py
ros2_ws/src/humanoid_control/src/: control_loop_node.cpp
tools/: ak70test.py  can_up.sh  env_check.sh  env_report_mainpc.txt
메모장/: 3-10진행상황.md  3월10일야간작업.md  기억용.md  깃업로드하는법.md  메모용.txt  진행상황.md  토픽통신공부용3월8일.md  토픽통신업데이트3월9일.txt
